--- a/templates/index.html
+++ b/templates/index.html
@@ -16,8 +16,8 @@
         <li>3</li>
     </ul>
     <form>
-        <label>What's your name?</label>
-        <input type="text" id="username"><br>
+        <label>Enter a Year</label>
+        <input type="text" id="year"><br>
         <button type="button" onclick='doStuff()'>Submit</button>
     </form>
     <button type="button" onclick="getData()">Get Data</button>
